# abio

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE-MIT  README.md  Taskfile.yml  build.rs  justfile  main.rs  rust-toolchain  rustfmt.toml
.cargo/: config.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: general.yml  security.yml
abio/: Cargo.toml
abio/docs/: ABOUT.md  encryption.md  progress.md
abio/docs/context/: endian.md
abio/docs/contiguous/: source.md
abio/docs/layout/: traits.md
abio/docs/macros/: DERIVE.md
abio/src/: codec.rs  context.rs  error.rs  integer.rs  lib.rs  marker.rs  sealed.rs  source.rs  util.rs
abio/src/codec/: decoder.rs  encoder.rs
abio/src/context/: endian.rs
abio/src/error/: internal.rs
abio/src/integer/: aligned.rs
abio/src/integer/aligned/: macros.rs
abio/src/marker/: abi.rs  bytes.rs  pointer.rs  zeroable.rs
abio/src/source/: array.rs  chunk.rs  pointer.rs  slice.rs  slice_mut.rs  span.rs
abio/src/util/: internal.rs  macros.rs
abio_derive/: Cargo.toml  README.md
abio_derive/docs/: derive_as_bytes_message
abio_derive/src/: helpers.rs  lib.rs  traits.rs  util.rs
abio_derive/src/helpers/: general.rs  markers.rs
abio_derive/src/helpers/markers/: abi.rs  as_bytes.rs  zeroable.rs
abio_derive/src/traits/: state.rs
abio_derive/tests/: basic.rs
derive/: Cargo.toml
derive/docs/: derive_abi_message
derive/src/: helpers.rs  internal.rs  lib.rs
derive/src/generator/: cursor.rs
derive/src/helpers/: bounds.rs
derive/tests/: basic.rs
docs/: LICENSING.md  ROADMAP.md  SCOPE.md  abio.md  ecosystem.md
docs/contiguous/: source.md
docs/layout/: traits.md
resources/: test_helpers.rs  typedefs.rs
src/: abi.rs  bytes.rs  config.rs  contiguous.rs  error.rs  integer.rs  integral.rs  layout.rs  lib.rs  macros.rs  sealed.rs  shims.rs  source.rs  types.rs  util.rs
src/abi/: aligned.rs  codec.rs  internal.rs  zeroable.rs
src/abi/codec/: bytes.rs  chunk.rs  endian.rs
src/abi/codec/bytes/: sealed.rs
src/bytes/: aligned_bytes.rs  borrowed.rs  cursor.rs  endian.rs  reader.rs  stream.rs
src/bytes/endian/: byteorder.rs
src/config/: codec.rs  validate.rs
src/contiguous/: array.rs  bytes.rs  chunk.rs  span.rs
src/integer/: aligned.rs  internal.rs  macros.rs
src/integral/: aligned.rs  internal.rs  signed.rs  unsigned.rs
src/layout/: abi.rs  as_bytes.rs  bytes_of.rs  config.rs  dec.rs  decode.rs  endian.rs  slice.rs  zeroable.rs
src/source/: array.rs  bytes.rs  chunk.rs  slice.rs  span.rs
src/util/: sealed.rs
tests/: arrays.rs  basic.rs  integration.rs  mod.rs
