[package]
name = "abio"
version = "0.3.0"
edition = "2021"
description = """
Safe abstractions for interfacing with the native operating system ABI.
"""
license = "MIT"
authors = ["ellacrity"]
exclude = ["/main.rs"]
categories = ["encoding", "no-std", "development-tools::ffi"]

[lib]
name = "abio"
crate-type = ["lib"]
path = "src/lib.rs"

[[bin]]
name = "abio"
path = "main.rs"

[features]
default = ["derive"]
derive = ["abio_derive"]
std = []

[dependencies]
abio_derive = { version = "0.1.1", path = "derive", optional = true }

[dev-dependencies]
getrandom = "0.2.10"

# Enable all features for the docs.rs metadata.
[package.metadata.docs.rs]
all-features = true

[profile.dev]
debug = 0
debug-assertions = true

[profile.test]
debug = true
debug-assertions = true

[profile.release]
debug = 0
debug-assertions = false
strip = true
lto = true

[build-dependencies]
autocfg = "1.1.0"
