[package]
name = "abio"
version = "0.3.0"
edition = "2021"
description = """
Safe abstractions for interfacing with the native operating system ABI.
"""
license = "MIT"
authors = ["ellacrity"]
exclude = ["/main.rs"]
categories = ["encoding", "no-std", "development-tools::ffi"]

[lib]
name = "abio"
path = "src/lib.rs"

[features]
default = ["derive"]
derive = ["abio_derive"]
std = []

[dependencies]
abio_derive = { version = "0.1.1", path = "derive", optional = true }
cfg-if = "1.0.0"

[dev-dependencies]
getrandom = "0.2.10"
libloading = "0.8.0"

# Enable all features for the docs.rs metadata.
[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = ["--generate-link-to-definition"]

[profile.dev]
debug = 0
debug-assertions = true

[profile.test]
debug = true
debug-assertions = true

[profile.release]
debug = 0
debug-assertions = false
strip = true
lto = true
