[workspace]
members = ["abio", "abio_derive"]
resolver = "2"

[workspace.package]
version = "0.4.0"
edition = "2021"
description = "Safely transmute raw byte slices directly to concrete types"
license = "MIT"
authors = [
	"ellacrity <116411054+ellacrity@users.noreply.github.com>",
	"Peter Donovan <peter.donovan@proton.me>",
]
categories = ["encoding", "no-std", "development-tools::ffi"]
documentation = "https://docs.rs/abio"
repository = "https://github.com/ellacrity/abio"

# [workspace.dependencies]
# abio_derive = { path = "abio_derive" }

[profile.dev]
# Reduces the compilation time of the crates in our workspace
# Toggle to on if you need to view extra debug information.
debug = 0
debug-assertions = true

[profile.test]
debug = true
debug-assertions = true

[profile.release]
debug = 0
strip = true
lto = true
