[package]
name = "abio_derive"
version = "0.1.1"
edition = "2021"
description = "Derive macros for the `abio` crate."
categories = ["encoding", "no-std"]
license = "MIT"

[lib]
name = "abio_derive"
proc-macro = true

[dependencies]
obfstr = "0.4.3"
proc-macro2 = { version = "1.0.66", features = ["nightly", "span-locations"] }
quote = "1"
syn = { version = "2", features = [
  "extra-traits",
  "full",
  "visit",
  "fold",
  "visit-mut",
] }

[dev-dependencies.abio]
path = "../"
features = ["derive"]
